--- a/Website/CryptoExchange.css
+++ b/Website/CryptoExchange.css
@@ -8,20 +8,20 @@ body {
     background-color: #f8f8f8;
 }
 
-header {
+h1 {
     background-color: #2c3e50;
     color: #ecf0f1;
     text-align: center;
     padding: 20px 0;
 }
 
-nav {
+.option {
     background-color: #34495e;
     padding: 10px;
     text-align: center;
 }
 
-nav a {
+.option a {
     color: #ecf0f1;
     text-decoration: none;
     padding: 8px 16px;
@@ -30,7 +30,7 @@ nav a {
     background-color: #2c3e50;
 }
 
-nav a:hover {
+.option a:hover {
     background-color: #1a252f;
 }
 
